<resources>
    <!-- Strings used for fragments for navigation -->

    <string name="app_name">Zdrowie++</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="forgot_password">Przypomnij hasło</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_account">Nie masz konta?</string>
    <string name="sign_up">ZAREJESTRUJ</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="no_email">Nie podano adresu e-mail</string>
    <string name="wrong_email">Błędny adres email</string>
    <string name="email_used">Adres jest już użyty</string>
    <string name="no_password">Nie podano hasła</string>
    <string name="mismatch_password">Hasła nie zgadzają się</string>
    <string name="wrong_password">Błędne hasło</string>
    <string name="user_registered">Użytkownik zarejestrowany</string>
    <string name="error_adding_user">Użytkownik nie został zarejestrowany</string>
    <string name="no_login_data">Informacje o użytkowniku nie zostały podane</string>
    <string name="user_logged">Użytkownik zalogowany</string>
    <string name="welcome">Witaj, %1$s</string>
    <string name="quick_actions">Szybkie akcje</string>
    <string name="steps">kroki</string>
    <string name="calories">kalorie</string>
    <string name="home">strona główna</string>
    <string name="gps">gps</string>
    <string name="supplements">suplementy</string>
    <string name="profile">profil</string>
    <string name="add_supplement">Dodaj Suplement</string>
    <string name="my_supplements">Moje Suplementy</string>
    <string name="no_supplements_added">nie dodano suplementów</string>
    <string name="supplement_image">Zdjęcie suplementu</string>
    <string name="supplement_name">Nazwa suplementu</string>
    <string name="amount">Ilość</string>
    <string name="intake_times">Godziny przyjmowania</string>
    <string name="add_time">Dodaj godzinę</string>
    <string name="select_image">Wybierz zdjęcie</string>
    <string name="profile_title">Profil użytkownika</string>
    <string name="email_label">Email:</string>
    <string name="switch_to_dark">Zmień tryb na ciemny</string>
    <string name="switch_to_light">Zmień tryb na jasny</string>
</resources>